@@ -1,5 +1,10 @@
 2005-10-03  mallum,,,  <mallum@openedhand.com>
 
+	* chkhinge26.c:
+	Fix fork/exec quick
+
+2005-10-03  mallum,,,  <mallum@openedhand.com>
+
 	* chkhinge26.c: (main):
 	Fix some old evtest logic
 
